--- a/css/main.css
+++ b/css/main.css
@@ -6,23 +6,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar {
-    width: 100%;
-    background-color: rgb(139, 44, 24);
-    overflow: auto;
-}
-    .navbar a {
-        float: left;
-        padding: 12px;
-        color: white;
-        text-decoration: none;
-        font-size: 17px;
-        width: 25%;
-        text-align: center;
-    }
-    .navbar a:hover {
-    background-color: rgb(79, 19, 6);
-    }
+
 .topfeed {
     height: 500px;
     float: left;
@@ -77,6 +61,12 @@ body {
     margin-bottom: 10%;
     border: 1px solid black;
     background-color: rgb(79, 19, 6)
+}
+
+.navbarObject{
+    width:100%;
+    border:none;
+    height:60px;
 }
 
 
